Added FontAwesome plugin Added pull refresh for iOS and refresh icon for android. Fixed some styling for both platforms. Fixed a couple of refresh issues with the promises. Upgraded to titanium sdk 3.3.0-RC Moved some requires to be in the alloy.js

--- a/app/views/lighting.xml
+++ b/app/views/lighting.xml
@@ -1,7 +1,15 @@
 <Alloy>
-    <View id="lightingContainerView">
+    <View id="lightingContainerView" platform="ios">
         <TableView id="lightTableView" dataCollection="device" dataFilter="whereShowInLightingView">
-                <Require src="lightRow" />
+            <RefreshControl id="refreshControl"></RefreshControl>
+            <Require src="lightRow" />
         </TableView>
+    </View>
+    <View id="lightingContainerView" platform="android">
+        <Button id="refreshControlBtn" icon="fa-refresh"/>
+        <TableView id="lightTableView" dataCollection="device" dataFilter="whereShowInLightingView">
+            <Require src="lightRow" />
+        </TableView>
+        <Widget id="fa" src="com.mattmcfarland.fontawesome"/>
     </View>
 </Alloy>
