--- a/app/views/settingsDeviceList.xml
+++ b/app/views/settingsDeviceList.xml
@@ -1,5 +1,5 @@
 <Alloy>
-    <Window id="win">
+    <Window id="win" tabBarHidden="true">
         <View class="container-view">
             <Label class="label-H5">Set a device to be visible or not and change order of devices.</Label>
             <TableView id="devicesTableView" class="tableview-form" dataCollection="device">
