--- a/app/views/lighting.xml
+++ b/app/views/lighting.xml
@@ -1,13 +1,13 @@
 <Alloy>
     <View id="lightingContainerView" platform="ios">
-        <TableView id="lightTableView" dataCollection="device" dataFilter="whereShowInLightingView">
+        <TableView id="lightTableView" dataCollection="device">
             <RefreshControl id="refreshControl"></RefreshControl>
             <Require src="lightRow" />
         </TableView>
     </View>
     <View id="lightingContainerView" platform="android">
         <Button id="refreshControlBtn" icon="fa-refresh"/>
-        <TableView id="lightTableView" dataCollection="device" dataFilter="whereShowInLightingView">
+        <TableView id="lightTableView" dataCollection="device">
             <Require src="lightRow" />
         </TableView>
         <Widget id="fa" src="com.mattmcfarland.fontawesome"/>
