--- a/app/views/settingsDeviceRow.xml
+++ b/app/views/settingsDeviceRow.xml
@@ -1,7 +1,7 @@
 <Alloy>
-    <TableViewRow alloy_id="{alloy_id}" class="deviceTableViewRow" sortId="{sortId}">
+    <TableViewRow id="deviceRow" alloy_id="{alloy_id}" viewName="{viewName}" class="deviceTableViewRow" sortId="{sortId}">
         <Label class="deviceRowLbl" text="{displayName}"></Label>
         <Label class="deviceRowTypeLbl" text="{type}"></Label>
-        <Switch id="lightSwitch" class="deviceRowSwitch" titleOn="Visible"></Switch>
+        <Switch id="deviceRowSwitch" class="deviceRowSwitch" titleOn="Visible"></Switch>
     </TableViewRow>
 </Alloy>
