Added some android performance enhancements.

--- a/app/views/deviceRow.xml
+++ b/app/views/deviceRow.xml
@@ -1,5 +1,5 @@
 <Alloy>
-    <TableViewRow class="lightRow">
+    <TableViewRow id="deviceRow" class="lightRow">
         <View id="lightContainer">
             <Button id="btn" class="btnOff" title="{displayName}" address="{address}"/>
             <View class="sliderContainer" type="{type}">
