--- a/app/views/settingsDeviceRow.xml
+++ b/app/views/settingsDeviceRow.xml
@@ -4,12 +4,14 @@
         <Label class="deviceRowTypeLbl" text="{type}"></Label>
         <Switch id="deviceRowSwitch" class="deviceRowSwitch" titleOn="Visible"></Switch>
     </TableViewRow>
-    <TableViewRow id="deviceRow" alloy_id="{alloy_id}" viewName="{viewName}" class="deviceTableViewRow" sortId="{sortId}" platform="android">
-        <Label class="deviceRowLbl" text="{displayName}"></Label>
-        <Label class="deviceRowTypeLbl" text="{type}"></Label>
-        <Switch id="deviceRowSwitch" class="deviceRowSwitch" titleOn="Visible"></Switch>
-        <Label id="moveUp" icon="fa-arrow-up" action="moveUp"></Label>
-        <Label id="moveDown" icon="fa-arrow-down" action="moveDown"></Label>
-        <Widget id="fa" src="com.mattmcfarland.fontawesome"/>
+    <TableViewRow id="deviceRow" alloy_id="{alloy_id}" viewName="{viewName}" className="deviceRow" class="deviceTableViewRow" sortId="{sortId}" platform="android">
+        <View>
+            <Label class="deviceRowLbl" text="{displayName}"></Label>
+            <Label class="deviceRowTypeLbl" text="{type}"></Label>
+            <Switch id="deviceRowSwitch" class="deviceRowSwitch" titleOn="Visible"></Switch>
+            <Label id="moveUp" icon="fa-arrow-circle-up" action="moveUp"></Label>
+            <Label id="moveDown" icon="fa-arrow-circle-down" action="moveDown"></Label>
+            <Widget id="fa" src="com.mattmcfarland.fontawesome"/>
+        </View>
     </TableViewRow>
 </Alloy>
