Cleaned up some naming.

--- a/app/views/devices.xml
+++ b/app/views/devices.xml
@@ -1,13 +1,13 @@
 <Alloy>
-    <View id="lightingContainerView" platform="ios">
-        <TableView id="lightTableView" dataCollection="device">
+    <View id="deviceContainerView" platform="ios">
+        <TableView id="deviceTableView" dataCollection="device">
             <RefreshControl id="refreshControl"></RefreshControl>
             <Require src="deviceRow" />
         </TableView>
     </View>
-    <View id="lightingContainerView" platform="android">
+    <View id="deviceContainerView" platform="android">
         <Button id="refreshControlBtn" icon="fa-refresh"/>
-        <TableView id="lightTableView" dataCollection="device">
+        <TableView id="deviceTableView" dataCollection="device">
             <Require src="deviceRow" />
         </TableView>
         <Widget id="fa" src="com.mattmcfarland.fontawesome"/>
