--- a/app/views/debug.xml
+++ b/app/views/debug.xml
@@ -1,4 +1,6 @@
 <Alloy>
+    <Collection id="deviceInView" src="DeviceInView" instance="true"/>
+    <Collection id="device" src="Device" instance="true"/>
     <Window id="win" backgroundColor="white" layout="vertical">
         <Button top="30" id="printDeviceInViewBtn">Print DeviceInView Table</Button>
         <Button id="printDeviceBtn">Print Device Table</Button>
