--- a/app/views/settingsDeviceList.xml
+++ b/app/views/settingsDeviceList.xml
@@ -1,4 +1,6 @@
 <Alloy>
+    <Collection src="Device" instance="true" id="deviceCollection" />
+    <Collection src="DeviceInView" instance="true" id="deviceInViewCollection" />
     <Window id="win" tabBarHidden="true">
         <View class="container-view">
             <TabbedBar id="chooseViewBar" module="/TabbedBar">
@@ -9,9 +11,20 @@
                 </Labels>
             </TabbedBar>
             <Label class="label-H5">Set a device to be visible or not and change order of devices.</Label>
-            <TableView id="devicesTableView" class="tableview-form" dataFunction="updateUI" dataTransform="transformFunction" dataCollection="device">
-                    <Require src="settingsDeviceRow"/>
-            </TableView>
+            <View id="deviceListContainerView">
+                <ListView id="deviceListView" defaultItemTemplate="template">
+                    <Templates>
+                        <ItemTemplate name="template">
+                            <Label bindId="displayName" class="deviceRowLbl"/>
+                            <Label bindId="itemType" class="deviceRowTypeLbl" />
+                            <Switch bindId="deviceRowSwitch" class="deviceRowSwitch" onChange="deviceRowSwitchChanged"/>
+                        </ItemTemplate>
+                    </Templates>
+                    <ListSection id="deviceListSection" dataTransform="doTransform" dataFunction="updateUI" dataTransform="transformFunction" dataCollection="$.deviceCollection">
+                        <ListItem class="deviceItem" modelId="{modelId}" displayName:text="{displayName}" itemType:text="{type}" sortId="{sortId}" deviceRowSwitch:value="{deviceRowSwitchVal}"/>
+                    </ListSection>
+                </ListView>
+            </View>
             <Button id="closeBtn">Save and Close</Button>
         </View>
     </Window>
