--- a/app/views/devices.xml
+++ b/app/views/devices.xml
@@ -29,7 +29,7 @@
                     </ItemTemplate>
                 </Templates>
                 <RefreshControl id="refreshControlFav" platform="ios" />
-                <ListSection id="deviceListSection" dataFilter="favFilter"
+                <ListSection id="deviceListSectionFav" dataFilter="favFilter"
                              dataFunction="updateUI" dataTransform="transformFunction"
                              dataCollection="$.device">
                     <ListItem template="{template}" class="deviceItem" modelId="{modelId}" address="{address}" itemType="{type}" sortId="{sortId}"
@@ -40,6 +40,79 @@
                               sceneBtnOff:title="Off" />
                 </ListSection>
             </ListView>
+            <ListView id="lightsListView" class="deviceListView" defaultItemTemplate="light">
+                <Templates>
+                    <ItemTemplate name="light">
+                        <View class="container" onClick="btnClick" onChange="updateSliderLbl"
+                              onTouchend="sendSliderVal">
+                            <Button id="btn" bindId="btn" class="btn"/>
+                            <View>
+                                <Slider bindId="slider" class="slider"/>
+                                <Label bindId="sliderLbl" class="sliderLbl"/>
+                            </View>
+                        </View>
+                    </ItemTemplate>
+                    <ItemTemplate name="groupLbl">
+                        <Label bindId="groupLbl" class="groupLbl"/>
+                    </ItemTemplate>
+                    <ItemTemplate name="scene">
+                        <View class="container horizontal sceneContainer">
+                            <Label bindId="sceneLbl" class="sceneLbl"/>
+                            <Button bindId="sceneBtnOn" class="sceneBtn" onClick="btnClick"/>
+                            <Button bindId="sceneBtnOff" class="sceneBtn" onClick="btnClick"/>
+                        </View>
+                    </ItemTemplate>
+                </Templates>
+                <RefreshControl id="refreshControlLights" platform="ios" />
+                <ListSection id="deviceListSectionLights" dataFilter="lightFilter"
+                             dataTransform="transformFunction"
+                             dataCollection="$.device">
+                    <ListItem template="{template}" class="deviceItem" modelId="{modelId}" address="{address}"
+                              itemType="{type}" sortId="{sortId}"
+                              btn:title="{displayName}"
+                              slider:value="{sliderVal}" sliderLbl:text="{sliderVal}"
+                              groupLbl:text="{displayName}"
+                              sceneLbl:text="{displayName}" sceneBtnOn:title="On"
+                              sceneBtnOff:title="Off"/>
+                </ListSection>
+            </ListView>
+            <ListView id="scenesListView" class="deviceListView" defaultItemTemplate="light">
+                <Templates>
+                    <ItemTemplate name="light">
+                        <View class="container" onClick="btnClick" onChange="updateSliderLbl"
+                              onTouchend="sendSliderVal">
+                            <Button id="btn" bindId="btn" class="btn"/>
+                            <View>
+                                <Slider bindId="slider" class="slider"/>
+                                <Label bindId="sliderLbl" class="sliderLbl"/>
+                            </View>
+                        </View>
+                    </ItemTemplate>
+                    <ItemTemplate name="groupLbl">
+                        <Label bindId="groupLbl" class="groupLbl"/>
+                    </ItemTemplate>
+                    <ItemTemplate name="scene">
+                        <View class="container horizontal sceneContainer">
+                            <Label bindId="sceneLbl" class="sceneLbl"/>
+                            <Button bindId="sceneBtnOn" class="sceneBtn" onClick="btnClick"/>
+                            <Button bindId="sceneBtnOff" class="sceneBtn" onClick="btnClick"/>
+                        </View>
+                    </ItemTemplate>
+                </Templates>
+                <RefreshControl id="refreshControlScenes" platform="ios" />
+                <ListSection id="deviceListSectionScenes" dataFilter="sceneFilter"
+                             dataTransform="transformFunction"
+                             dataCollection="$.device">
+                    <ListItem template="{template}" class="deviceItem" modelId="{modelId}" address="{address}"
+                              itemType="{type}" sortId="{sortId}"
+                              btn:title="{displayName}"
+                              slider:value="{sliderVal}" sliderLbl:text="{sliderVal}"
+                              groupLbl:text="{displayName}"
+                              sceneLbl:text="{displayName}" sceneBtnOn:title="On"
+                              sceneBtnOff:title="Off"/>
+                </ListSection>
+            </ListView>
+
             <!--<TableView id="favoritesTableView" class="deviceTableView" dataFilter="favFilter" dataCollection="$.device">-->
                 <!--<RefreshControl id="refreshControlFav" platform="ios" />-->
                 <!--<Require src="deviceRow" />-->
