Moving items up and down the list on the settings view for android.

--- a/app/views/settingsDeviceList.xml
+++ b/app/views/settingsDeviceList.xml
@@ -15,15 +15,19 @@
                 <ListView id="deviceListView" defaultItemTemplate="template">
                     <Templates>
                         <ItemTemplate name="template">
+                            <Label bindId="moveUp" class="moveUp" onClick="moveUp" />
+                            <Label bindId="moveDown" class="moveDown" onClick="moveDown" />
                             <Label bindId="displayName" class="deviceRowLbl"/>
                             <Label bindId="itemType" class="deviceRowTypeLbl" />
                             <Switch bindId="deviceRowSwitch" class="deviceRowSwitch" onChange="deviceRowSwitchChanged"/>
                         </ItemTemplate>
                     </Templates>
                     <ListSection id="deviceListSection" dataTransform="doTransform" dataFunction="updateUI" dataTransform="transformFunction" dataCollection="$.deviceCollection">
-                        <ListItem class="deviceItem" modelId="{modelId}" displayName:text="{displayName}" itemType:text="{type}" sortId="{sortId}" deviceRowSwitch:value="{deviceRowSwitchVal}"/>
+                        <ListItem class="deviceItem" modelId="{modelId}" displayName:text="{displayName}" itemType:text="{type}" sortId="{sortId}" deviceRowSwitch:value="{deviceRowSwitchVal}" platform="ios" />
+                        <ListItem class="deviceItem" modelId="{modelId}" sortId="{sortId}" displayName:text="{displayName}" itemType:text="{type}" sortId="{sortId}" deviceRowSwitch:value="{deviceRowSwitchVal}" platform="android" />
                     </ListSection>
                 </ListView>
+                <Widget id="fa" src="com.mattmcfarland.fontawesome"/>
             </View>
             <Button id="closeBtn">Save and Close</Button>
         </View>
