Fixed Scene buttons. Fixed Settings page on android so it now has labels since on some devices the hint text was not coming up.

--- a/app/views/devices.xml
+++ b/app/views/devices.xml
@@ -23,8 +23,8 @@
                     <ItemTemplate name="scene">
                         <View class="container horizontal sceneContainer">
                             <Label bindId="sceneLbl" class="sceneLbl"/>
-                            <Button bindId="sceneBtnOn" class="sceneBtn" onClick="btnClick"/>
-                            <Button bindId="sceneBtnOff" class="sceneBtn" onClick="btnClick"/>
+                            <Button bindId="sceneBtnOn" class="sceneBtn" onClick="sceneOnBtn"/>
+                            <Button bindId="sceneBtnOff" class="sceneBtn" onClick="sceneOffBtn"/>
                         </View>
                     </ItemTemplate>
                 </Templates>
@@ -52,8 +52,8 @@
                     <ItemTemplate name="scene">
                         <View class="container horizontal sceneContainer">
                             <Label bindId="sceneLbl" class="sceneLbl"/>
-                            <Button bindId="sceneBtnOn" class="sceneBtn" onClick="btnClick"/>
-                            <Button bindId="sceneBtnOff" class="sceneBtn" onClick="btnClick"/>
+                            <Button bindId="sceneBtnOn" class="sceneBtn" onClick="sceneOnBtn"/>
+                            <Button bindId="sceneBtnOff" class="sceneBtn" onClick="sceneOffBtn"/>
                         </View>
                     </ItemTemplate>
                 </Templates>
@@ -81,8 +81,8 @@
                     <ItemTemplate name="scene">
                         <View class="container horizontal sceneContainer">
                             <Label bindId="sceneLbl" class="sceneLbl"/>
-                            <Button bindId="sceneBtnOn" class="sceneBtn" onClick="btnClick"/>
-                            <Button bindId="sceneBtnOff" class="sceneBtn" onClick="btnClick"/>
+                            <Button bindId="sceneBtnOn" class="sceneBtn" onClick="sceneOnBtn"/>
+                            <Button bindId="sceneBtnOff" class="sceneBtn" onClick="sceneOffBtn"/>
                         </View>
                     </ItemTemplate>
                 </Templates>
